--- a/recipe-page-main/index.html
+++ b/recipe-page-main/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
@@ -9,69 +9,88 @@
   <title>Frontend Mentor | Recipe page</title>
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+<link rel="stylesheet" href="/recipe-page-main/assets/css/style.css">
+
 </head>
 <body>
+  <div class="div-body">
+    <div class="img">
+      <img src="/recipe-page-main/assets/images/image-omelette.jpeg" class="image-omelette" alt="Image omelette">    
+    </div>
+    <div class="title-text">
+      <h1 class="title">Simple Omelette Recipe</h1>
+      <p class="text">An easy and quick dish, perfect for any meal. This classic omelette combines beaten eggs cooked 
+        to perfection, optionally filled with your choice of cheese, vegetables, or meats.</p>
+    </div>
+    <div class="preparation">
+      <h3 class="title-prep">Preparation time</h3>
+      <ul>
+        <li class="disc"><b>Total:</b> Approximately 10 minutes</li>
+        <li class="disc"><b>Preparation:</b> 5 minutes</li>
+        <li class="disc"><b>Cooking:</b> 5 minutes</li>
+      </ul>
+    </div>
 
-  Simple Omelette Recipe
+    <div class="ingredients">
+      <h1 class="title-ingredients">Ingredients</h1>
+      <ul>
+        <li class="square">2-3 large eggs</li>
+        <li class="square">Salt, to taste</li>
+        <li class="square">Pepper, to taste</li>
+        <li class="square">1 tablespoon of butter or oil</li>
+        <li class="square">Optional fillings: cheese, diced vegetables, cooked meats, herbs
+        </li>
+      </ul>
+    </div>
 
-  An easy and quick dish, perfect for any meal. This classic omelette combines beaten eggs cooked 
-  to perfection, optionally filled with your choice of cheese, vegetables, or meats.
+    <div class="hr"></div>
 
-  Preparation time
+    <div class="instructions">
+      <h1 class="title-instructions">Instructions</h1> 
+      <ol class="ol-font" type="1">
+        <li class="number"><b>Beat the eggs:</b> In a bowl, beat the eggs with a pinch of salt and pepper until they are well mixed. 
+          You can add a tablespoon of water or milk for a fluffier texture.</li>
+          <li class="number"><b>Heat the pan:</b> Place a non-stick frying pan over medium heat and add butter or oil.</li>
+          <li class="number"><b>Cook the omelette:</b> Once the butter is melted and bubbling, pour in the eggs. Tilt the pan to ensure 
+            the eggs evenly coat the surface.</li>
+          <li class="number"><b>Add fillings (optional):</b> When the eggs begin to set at the edges but are still slightly runny in the 
+            middle, sprinkle your chosen fillings over one half of the omelette.</li>
+          <li class="number"><b>Fold and serve:</b> As the omelette continues to cook, carefully lift one edge and fold it over the 
+            fillings. Let it cook for another minute, then slide it onto a plate.</li>
+          <li class="number"><b>Enjoy:</b> Serve hot, with additional salt and pepper if needed.</li>
+      </ol>
+    </div>
 
-  Total: Approximately 10 minutes
-  Preparation: 5 minutes
-  Cooking: 5 minutes
+    <div class="hr"></div>
 
-  Ingredients
+    <div class="nutrition">
+      <h1 class="title-nutrition">Nutrition</h1>
+      <p class="text-nutrition">The table below shows nutritional values per serving without the additional fillings.</p>
 
-  2-3 large eggs
-  Salt, to taste
-  Pepper, to taste
-  1 tablespoon of butter or oil
-  Optional fillings: cheese, diced vegetables, cooked meats, herbs
-
-  Instructions
-
-  Beat the eggs: In a bowl, beat the eggs with a pinch of salt and pepper until they are well mixed. 
-  You can add a tablespoon of water or milk for a fluffier texture.
-
-  Heat the pan: Place a non-stick frying pan over medium heat and add butter or oil.
-
-  Cook the omelette: Once the butter is melted and bubbling, pour in the eggs. Tilt the pan to ensure 
-  the eggs evenly coat the surface.
-
-  Add fillings (optional): When the eggs begin to set at the edges but are still slightly runny in the 
-  middle, sprinkle your chosen fillings over one half of the omelette.
-
-  Fold and serve: As the omelette continues to cook, carefully lift one edge and fold it over the 
-  fillings. Let it cook for another minute, then slide it onto a plate.
-
-  Enjoy: Serve hot, with additional salt and pepper if needed.
-
-  Nutrition
-
-  The table below shows nutritional values per serving without the additional fillings.
-
-  Calories
-  277kcal
-
-  Carbs
-  0g
-
-  Protein
-  20g
-
-  Fat
-  22g
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+      <table>
+        <tr>
+          <td>Calories</td>
+          <th>277kcal</th>
+        </tr>
+        <tr>
+          <td>Carbs</td>
+          <th>0g</th>
+        </tr>
+        <tr>
+          <td>Protein</td>
+          <th>20g</th>
+        </tr>
+        <tr>
+          <td>Fat</td>
+          <th>22g</th>
+        </tr>
+      </table>
+    </div>
+    
+    <div class="attribution">
+      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+      Coded by <a href="#">Your Name Here</a>.
+    </div>
   </div>
 </body>
 </html>
